--- a/style.css
+++ b/style.css
@@ -2,6 +2,13 @@
   font-size: 50PX;
 }
 
-#headigM {
-  font-color: #033dfc;
+/* above is for index.html*/
+
+
+/* below is for main.html*/
+
+
+
+#headingM {
+  color: #033dfc;
 }
